# Chilling-with-RUST

./: .env  Cargo.toml
src/: main.rs
src/config/: mod.rs
src/db/: database.rs  mod.rs  schema.sql
src/docs/: docs.rs  mod.rs
src/model/: mod.rs  model.rs
src/routes/: mod.rs  todos.rs
